:fire: [ADD]: open graph

--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Ping Coming Soon" />
+    <meta name="description" content="Landing Page Ping Coming Soon">
+<meta property="og:type" content="website" />
+<meta property="og:description" 
+  content="Landing Page Ping Coming Soon" />
+<meta property="og:url" content="https://alecanl.github.io/ping-coming-soon-page/" />
+<meta property="og:image" content="https://github.com/AlecANL/ping-coming-soon-page/raw/main/src/assets/design/design.png" />
     <!-- displays site properly based on user's device -->
 
     <link
